gnovm/cmd/gno/testdata/gno_precompile/03_gno_files_parse_error.txtar
# Run gno precompile with gno files with parse errors

! gno precompile .

! stdout .+
stderr 'precompile: parse: main.gno:3:1: expected declaration, found invalid'
stderr 'precompile: parse: sub/sub.gno:3:1: expected declaration, found invalid'

# no *.gen.go files are created
! exec test -f main.gno.gen.go
! exec test -f sub/sub.gno.gen.go

-- main.gno --
package main

invalid

func main() {}

-- sub/sub.gno --
package sub

invalid
